This file summarizes the major and interesting changes for each release. For a
detailled list of changes, please see ChangeLog.

2.10 (UNRELEASED):
------------------
Improvements:
 * Support retracing foreign powerpc reports, thanks Steve Langasek.
 * apport/report.py: Generate a crash signature for suspend/resume failures.
 * hookutils.py: Add attach_upstart_logs(), thanks Steve Langasek.

Bug fixes:
 * hookutils.attach_conffiles(): Fix IOError crash on inaccessible conffiles;
   mark them as '[inaccessible: <reason>]' instead. (LP: #1154536)
 * hookutils.in_session_of_problem(): Fix crash when the current locale is
   invalid. (LP: #1154896) 
 * data/gcc_ice_hook: Fix crash with source files that have non-UTF8 data.
   (LP: #1045283)
 * apport/report.py: Handle the case where the user has been removed from the
   system, but one of its still-running binaries crashes (LP: #1163453).
 * Fix anonymization of user/GECOS fields with regexp control characters like
   '+'. (LP: #985049)
 * Run tests under LC_CTYPE=C and unset LANG as well, to discover assumptions
   about UTF-8 locales. Fix the two failing tests.
 * Fix UnicodeDecodeError when apport encounters non-ASCII environment
   variables. (LP: #1172638)

2.9.2 (2013-03-19):
-------------------
Improvements:
 * report.py, add_package_info(): Add "[origin: unknown]" tag to
   Package/Dependencies fields for non-distro package whose origin cannot be
   determined. (LP: #1148116)
 * Adjust kernel_crashdump to the format kdump-tools produces. Thanks Louis
   Bouchard.

Bug fixes:
 * Write core dumps on SIGQUIT if ulimit allows. Thanks Graeme Hewson.
   (LP: #1153662)

2.9.1 (2013-03-07):
-------------------
Improvements:
 * launchpad.py: Add support for filing bugs as private. Document this in
   doc/crashdb-conf.txt. (LP: #1144647)

Bug fixes:
 * test_signal_crashes.py: Fix test_crash_apport() when being run under
   LD_PRELOAD.
 * Fix crash in error() and warning() if there is no sys.stderr. (LP: #1012445)