@@ -7,6 +7,7 @@ Improvements:
  * Support retracing foreign powerpc reports, thanks Steve Langasek.
  * apport/report.py: Generate a crash signature for suspend/resume failures.
  * hookutils.py: Add attach_upstart_logs(), thanks Steve Langasek.
+ * hookutils.py, in_session_of_problem(): Port from ConsoleKit to logind.
 
 Bug fixes:
  * hookutils.attach_conffiles(): Fix IOError crash on inaccessible conffiles;
